<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_nav_graph"
    app:startDestination="@id/nav_home_fragment">

    <fragment
        android:id="@+id/nav_home_fragment"
        android:name="com.vereshchagin.nikolay.stankinschedule.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_schedule_fragment"
        android:name="com.vereshchagin.nikolay.stankinschedule.ui.schedule.myschedules.MySchedulesFragment"
        android:label="@string/nav_schedule"
        tools:layout="@layout/fragment_my_schedule">

        <action
            android:id="@+id/to_repository_activity"
            app:destination="@id/nav_schedule_repository_activity" />

    </fragment>

    <fragment
        android:id="@+id/nav_module_journal_fragment"
        android:name="com.vereshchagin.nikolay.stankinschedule.ui.modulejournal.view.ModuleJournalFragment"
        android:label="@string/nav_module_journal"
        tools:layout="@layout/fragment_module_journal">

        <action
            android:id="@+id/toModuleJournalLoginFragment"
            app:destination="@id/nav_module_journal_login_fragment"
            app:enterAnim="@anim/nav_enter_anim"
            app:exitAnim="@anim/nav_exit_anim"
            app:popEnterAnim="@anim/nav_pop_enter_anim"
            app:popExitAnim="@anim/nav_pop_exit_anim"
            app:popUpTo="@+id/nav_home_fragment" />

        <deepLink
            android:id="@+id/module_journal_deep_link"
            android:autoVerify="true"
            app:uri="lk.stankin.ru/" />

    </fragment>

    <fragment
        android:id="@+id/nav_module_journal_login_fragment"
        android:name="com.vereshchagin.nikolay.stankinschedule.ui.modulejournal.login.ModuleJournalLoginFragment"
        android:label="@string/nav_module_journal"
        tools:layout="@layout/fragment_module_journal_login" />

    <fragment
        android:id="@+id/nav_news_fragment"
        android:name="com.vereshchagin.nikolay.stankinschedule.ui.news.review.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />

    <activity
        android:id="@+id/nav_news_viewer_activity"
        android:name="com.vereshchagin.nikolay.stankinschedule.ui.news.viewer.NewsViewerActivity"
        android:label=""
        tools:layout="@layout/activity_news_viewer">

        <argument
            android:name="news_id"
            app:argType="integer" />

    </activity>

    <activity
        android:id="@+id/nav_schedule_repository_activity"
        android:name="com.vereshchagin.nikolay.stankinschedule.ui.schedule.repository.ScheduleRepositoryActivity"
        android:label="@string/repository"
        tools:layout="@layout/activity_schedule_repository" />

    <fragment
        android:id="@+id/nav_schedule_view_fragment"
        android:name="com.vereshchagin.nikolay.stankinschedule.ui.schedule.view.ScheduleViewFragment"
        android:label="@string/sch_view"
        tools:layout="@layout/fragment_schedule_view" />

    <activity
        android:id="@+id/nav_schedule_editor_activity"
        android:name="com.vereshchagin.nikolay.stankinschedule.ui.schedule.editor.view.ScheduleEditorActivity"
        android:label="@string/schedule_editor"
        tools:layout="@layout/activity_schedule_editor" />

    <activity
        android:id="@+id/nav_pair_editor_activity"
        android:name="com.vereshchagin.nikolay.stankinschedule.ui.schedule.editor.pair.PairEditorActivity"
        android:label="activity_pair_editor"
        tools:layout="@layout/activity_pair_editor" />

    <activity
        android:id="@+id/nav_date_editor_activity"
        android:name="com.vereshchagin.nikolay.stankinschedule.ui.schedule.editor.date.DateEditorActivity"
        android:label="activity_date_editor"
        tools:layout="@layout/activity_date_editor" />

    <fragment
        android:id="@+id/nav_about_fragment"
        android:name="com.vereshchagin.nikolay.stankinschedule.ui.about.AboutFragment"
        android:label="@string/nav_about_application"
        tools:layout="@layout/fragment_about" />

    <navigation
        android:id="@+id/settings_nav_graph"
        android:label="@string/nav_settings"
        app:startDestination="@id/nav_settings_fragment">

        <fragment
            android:id="@+id/nav_settings_fragment"
            android:name="com.vereshchagin.nikolay.stankinschedule.ui.settings.view.SettingsFragment"
            android:label="@string/nav_settings">

            <action
                android:id="@+id/toSettingsScheduleFragment"
                app:destination="@id/nav_settings_schedule_fragment"
                app:enterAnim="@anim/nav_enter_anim"
                app:exitAnim="@anim/nav_exit_anim"
                app:popEnterAnim="@anim/nav_pop_enter_anim"
                app:popExitAnim="@anim/nav_pop_exit_anim" />
            <action
                android:id="@+id/toSettingsNotificationFragment"
                app:destination="@id/nav_settings_notification_fragment"
                app:enterAnim="@anim/nav_enter_anim"
                app:exitAnim="@anim/nav_exit_anim"
                app:popEnterAnim="@anim/nav_pop_enter_anim"
                app:popExitAnim="@anim/nav_pop_exit_anim" />
            <action
                android:id="@+id/toSettingsWidgetFragment"
                app:destination="@id/nav_settings_widget_fragment"
                app:enterAnim="@anim/nav_enter_anim"
                app:exitAnim="@anim/nav_exit_anim"
                app:popEnterAnim="@anim/nav_pop_enter_anim"
                app:popExitAnim="@anim/nav_pop_exit_anim" />
            <action
                android:id="@+id/toSettingsGeneralFragment"
                app:destination="@id/nav_settings_general_fragment"
                app:enterAnim="@anim/nav_enter_anim"
                app:exitAnim="@anim/nav_exit_anim"
                app:popEnterAnim="@anim/nav_pop_enter_anim"
                app:popExitAnim="@anim/nav_pop_exit_anim" />

        </fragment>

        <fragment
            android:id="@+id/nav_settings_notification_fragment"
            android:name="com.vereshchagin.nikolay.stankinschedule.ui.settings.view.notification.SettingsNotificationFragment"
            android:label="@string/notification" />

        <fragment
            android:id="@+id/nav_settings_widget_fragment"
            android:name="com.vereshchagin.nikolay.stankinschedule.ui.settings.view.widget.SettingsWidgetFragment"
            android:label="@string/widget" />

        <fragment
            android:id="@+id/nav_settings_schedule_fragment"
            android:name="com.vereshchagin.nikolay.stankinschedule.ui.settings.view.schedule.SettingsScheduleFragment"
            android:label="@string/sch_name" />
        <fragment
            android:id="@+id/nav_settings_general_fragment"
            android:name="com.vereshchagin.nikolay.stankinschedule.ui.settings.view.general.SettingsGeneralFragment"
            android:label="@string/pref_general" />

    </navigation>

    <action
        android:id="@+id/to_settings_fragment"
        app:destination="@id/settings_nav_graph"
        app:enterAnim="@anim/nav_enter_anim"
        app:exitAnim="@anim/nav_exit_anim"
        app:popEnterAnim="@anim/nav_pop_enter_anim"
        app:popExitAnim="@anim/nav_pop_exit_anim" />

    <action
        android:id="@+id/to_schedule_view_fragment"
        app:destination="@id/nav_schedule_view_fragment"
        app:enterAnim="@anim/nav_enter_anim"
        app:exitAnim="@anim/nav_exit_anim"
        app:popEnterAnim="@anim/nav_pop_enter_anim"
        app:popExitAnim="@anim/nav_pop_exit_anim" />

    <action
        android:id="@+id/to_module_journal_fragment"
        app:destination="@id/nav_module_journal_fragment"
        app:enterAnim="@anim/nav_enter_anim"
        app:exitAnim="@anim/nav_exit_anim"
        app:popEnterAnim="@anim/nav_pop_enter_anim"
        app:popExitAnim="@anim/nav_pop_exit_anim" />


    <action
        android:id="@+id/to_about_fragment"
        app:destination="@id/nav_about_fragment"
        app:enterAnim="@anim/nav_enter_anim"
        app:exitAnim="@anim/nav_exit_anim"
        app:popEnterAnim="@anim/nav_pop_enter_anim"
        app:popExitAnim="@anim/nav_pop_exit_anim" />

    <action
        android:id="@+id/to_news_viewer_fragment"
        app:destination="@id/nav_news_viewer_activity"
        app:enterAnim="@anim/nav_enter_anim"
        app:exitAnim="@anim/nav_exit_anim"
        app:popEnterAnim="@anim/nav_pop_enter_anim"
        app:popExitAnim="@anim/nav_pop_exit_anim" />

</navigation>