<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="schedule_list_title">Schedule</string>

    <string name="schedule_creator">Add schedule</string>
    <string name="schedule_create_new">Create new</string>
    <string name="schedule_from_device">From device</string>
    <string name="schedule_from_repository">From repository</string>

    <string name="schedule_my_list">My schedules</string>
    <string name="no_schedules">No schedules</string>
    <string name="schedule_count_selected">%1$s selected</string>
    <string name="schedule_set_favorite">Set favorite</string>
    <string name="schedule_remove_schedule">Remove schedule</string>
...
